게시글 파일 업로드 완료

--- a/src/main/resources/static/css/signup.css
+++ b/src/main/resources/static/css/signup.css
@@ -29,6 +29,10 @@ header {height: 200px;}
   border: 0.5px solid lightgray;
 }
 footer{height: 60px;}
+.login-id{
+	margin-left:450px;
+	font-size:20px;
+}
 .password-forget{color:black;}
 .password-forget:hover {color:black; text-decoration:none !important}
 .sing-up:hover{text-decoration:none !important}
