--- a/src/main/resources/static/css/signup.css
+++ b/src/main/resources/static/css/signup.css
@@ -22,6 +22,8 @@ header {height: 200px;}
     align-items: center;
    
 }
+
+
 .line {
   width: 570px;
   margin-top: 50px;
@@ -42,5 +44,8 @@ footer{height: 60px;}
 .contents-box {width:600px; }
 .card {width:566px;}
 #writeTextArea {height:100px; }
+a {text-decoration:none; color:#000;}
+a:hover {text-decoration:none; color:#000;}
+
 
 
